Create libs directory. Create util module. Move method for content directory creation into util module. Implement log messages as structure in config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,10 @@
 {
-    "targetDirectory": "content"
+    "contentDirectory": "content",
+
+    "messages": {
+        "contentDirectory": {
+            "created": "Content directory has been created",
+            "exist": "Content directory already exist"
+        }
+    }
 }
