--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,5 @@
 {
     "contentDirectory": "content",
-
     "gitAPI": {
         "common": {
             "version": "3.0.0",
@@ -16,7 +15,6 @@
             "url": "/api/v3"
         }
     },
-
     "sources": {
         "private": [
             {
@@ -25,7 +23,9 @@
                     {
                         "name": "islands-components",
                         "targetDir": "islands-components",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -38,7 +38,9 @@
                     {
                         "name": "islands-page",
                         "targetDir": "islands-page",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -51,7 +53,9 @@
                     {
                         "name": "islands-user",
                         "targetDir": "islands-user",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -64,7 +68,9 @@
                     {
                         "name": "islands-search",
                         "targetDir": "islands-search",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -84,8 +90,13 @@
                     {
                         "name": "bem-core",
                         "targetDir": "bem-core",
-                        "type": ["libs", "docs"],
-                        "docDirs": ["common.docs"],
+                        "type": [
+                            "libs",
+                            "docs"
+                        ],
+                        "docDirs": [
+                            "common.docs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -98,7 +109,9 @@
                     {
                         "name": "bem-components",
                         "targetDir": "bem-components",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -112,46 +125,95 @@
                         "name": "bem-method",
                         "targetDir": "bem-method",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "borschik",
                         "targetDir": "borschik",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "borschik-server",
                         "targetDir": "borschik-server",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "bem-articles",
                         "targetDir": "articles/bem-articles",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "bem-www",
                         "targetDir": "bem-www",
-                        "docDirs": ["content/blog", "content/tools", "content/authors", "content/pages"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "content/blog",
+                            "content/tools",
+                            "content/authors",
+                            "content/pages"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -161,11 +223,21 @@
                     {
                         "name": "csso",
                         "targetDir": "csso",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -175,11 +247,21 @@
                     {
                         "name": "firmCardStory",
                         "targetDir": "articles/firm-card-story",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -190,10 +272,18 @@
                         "name": "bem-news",
                         "targetDir": "blog/bem-news",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -203,11 +293,21 @@
                     {
                         "name": "xjst",
                         "targetDir": "xjst",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -217,11 +317,21 @@
                     {
                         "name": "svgo",
                         "targetDir": "svgo",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -231,29 +341,59 @@
                     {
                         "name": "setochka",
                         "targetDir": "setochka",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "ometa-js",
                         "targetDir": "ometa-js",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "gonzales",
                         "targetDir": "gonzales",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             }
