--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ometajs": "~3.1.4",
     "marked": "~0.2.5",
     "highlight.js": "7",
-    "sha1": "1.0.0"
+    "sha1": "1.0.0",
+    "q-io": "~1.10.6"
   }
 }
